{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 26,
  "lineage": "6aab54c0-cc4d-1f59-ff4d-61d77d415a4d",
  "resources": [
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0113916b751d27a96",
            "domain": "vpc",
            "id": "eipalloc-0f48a5b6053e34e86",
            "network_interface": "eni-0af7154fe36826096",
            "private_dns": "ip-172-33-10-162.ec2.internal",
            "private_ip": "172.33.10.162",
            "public_dns": "ec2-18-209-156-39.compute-1.amazonaws.com",
            "public_ip": "18.209.156.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-090f586b99b94465f",
            "domain": "vpc",
            "id": "eipalloc-02350cf6093ce7797",
            "network_interface": "eni-03154a8288e4c7d5e",
            "private_dns": "ip-172-33-20-106.ec2.internal",
            "private_ip": "172.33.20.106",
            "public_dns": "ec2-52-206-236-150.compute-1.amazonaws.com",
            "public_ip": "52.206.236.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03000cc152bd0aefc",
            "domain": "vpc",
            "id": "eipalloc-078197b73fa8ab985",
            "network_interface": "eni-0f5d1377902882510",
            "private_dns": "ip-172-33-30-9.ec2.internal",
            "private_ip": "172.33.30.9",
            "public_dns": "ec2-3-211-243-36.compute-1.amazonaws.com",
            "public_ip": "3.211.243.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e2b425646ba5f370",
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_internet_gw"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f48a5b6053e34e86",
            "id": "nat-095a38e43dd92967b",
            "network_interface_id": "eni-0af7154fe36826096",
            "private_ip": "172.33.10.162",
            "public_ip": "18.209.156.39",
            "subnet_id": "subnet-0f7e3ec2729a541ad",
            "tags": {
              "Name": "sandbox_nat_gw"
            }
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02350cf6093ce7797",
            "id": "nat-0636997514dc9f2a5",
            "network_interface_id": "eni-03154a8288e4c7d5e",
            "private_ip": "172.33.20.106",
            "public_ip": "52.206.236.150",
            "subnet_id": "subnet-02a6938fba66b1edf",
            "tags": {
              "Name": "sandbox_nat_gw"
            }
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078197b73fa8ab985",
            "id": "nat-002bf6ac5c8477f05",
            "network_interface_id": "eni-0f5d1377902882510",
            "private_ip": "172.33.30.9",
            "public_ip": "3.211.243.36",
            "subnet_id": "subnet-07754240a686c0107",
            "tags": {
              "Name": "sandbox_nat_gw"
            }
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lambda_function_rt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04271886c6ea9d242",
            "owner_id": "115048722537",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-095a38e43dd92967b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_lambda_function_rt_a"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00018d0d7b8c22a49",
            "owner_id": "115048722537",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0636997514dc9f2a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_lambda_function_rt_b"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e30525a13ebbacde",
            "owner_id": "115048722537",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-002bf6ac5c8477f05",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_lambda_function_rt_c"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a50b9157330d07db",
            "owner_id": "115048722537",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2b425646ba5f370",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox_public_rt"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003cebeac1fc0defd",
            "route_table_id": "rtb-04271886c6ea9d242",
            "subnet_id": "subnet-0d444ccb00c00d4ab"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_route_table.lambda_function_rt",
            "module.sandbox_vpc.aws_subnet.private_subnets",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfaa4baf7b7a485",
            "route_table_id": "rtb-00018d0d7b8c22a49",
            "subnet_id": "subnet-07e3c2f776f16b624"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_route_table.lambda_function_rt",
            "module.sandbox_vpc.aws_subnet.private_subnets",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0f7ea5c63442e2",
            "route_table_id": "rtb-0e30525a13ebbacde",
            "subnet_id": "subnet-0d4b74c896c628792"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_eip.nat_eip",
            "module.sandbox_vpc.aws_nat_gateway.nat_gw",
            "module.sandbox_vpc.aws_route_table.lambda_function_rt",
            "module.sandbox_vpc.aws_subnet.private_subnets",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50c5ba391ef82eb",
            "route_table_id": "rtb-0a50b9157330d07db",
            "subnet_id": "subnet-0f7e3ec2729a541ad"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d507b22a8551ec52",
            "route_table_id": "rtb-0a50b9157330d07db",
            "subnet_id": "subnet-02a6938fba66b1edf"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2c692c4c67bb13",
            "route_table_id": "rtb-0a50b9157330d07db",
            "subnet_id": "subnet-07754240a686c0107"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_internet_gateway.internet_gw",
            "module.sandbox_vpc.aws_route_table.public_rt",
            "module.sandbox_vpc.aws_subnet.public_subnets",
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:subnet/subnet-0d444ccb00c00d4ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.33.100.0/24",
            "id": "subnet-0d444ccb00c00d4ab",
            "map_public_ip_on_launch": true,
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_public_subnet_a"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:subnet/subnet-07e3c2f776f16b624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.33.110.0/24",
            "id": "subnet-07e3c2f776f16b624",
            "map_public_ip_on_launch": true,
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_public_subnet_b"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:subnet/subnet-0d4b74c896c628792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.33.120.0/24",
            "id": "subnet-0d4b74c896c628792",
            "map_public_ip_on_launch": true,
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_public_subnet_c"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:subnet/subnet-0f7e3ec2729a541ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.33.10.0/24",
            "id": "subnet-0f7e3ec2729a541ad",
            "map_public_ip_on_launch": true,
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_public_subnet_a"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:subnet/subnet-02a6938fba66b1edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.33.20.0/24",
            "id": "subnet-02a6938fba66b1edf",
            "map_public_ip_on_launch": true,
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_public_subnet_b"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:subnet/subnet-07754240a686c0107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.33.30.0/24",
            "id": "subnet-07754240a686c0107",
            "map_public_ip_on_launch": true,
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_public_subnet_c"
            },
            "vpc_id": "vpc-0f7acd961972f7332"
          },
          "dependencies": [
            "module.sandbox_vpc.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sandbox_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "application_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115048722537:vpc/vpc-0f7acd961972f7332",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.33.0.0/16",
            "default_network_acl_id": "acl-07b8ca1d08f25a2ab",
            "default_route_table_id": "rtb-0c04aadc137d9ea95",
            "default_security_group_id": "sg-0e50a09f78a64b86d",
            "dhcp_options_id": "dopt-38a74d42",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f7acd961972f7332",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c04aadc137d9ea95",
            "owner_id": "115048722537",
            "tags": {
              "Name": "sandbox_application_vpc"
            }
          }
        }
      ]
    }
  ]
}